--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,4 @@
 .wrapper {
-    height: 80px;
     width: 100%;
     background-color: var(--black-color);
     display: flex;
@@ -11,13 +10,20 @@
 
 .inner {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     width: 1170px;
 }
 
+.control {
+    height: 80px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
 .logo {
-    transform: translateY(2px);
     width: 200px;
+    height: 30px;
 }
 
 .search {
