--- a/src/components/Navigate/Navigate.module.scss
+++ b/src/components/Navigate/Navigate.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
     width: 100%;
     height: 40px;
+    user-select: none;
 }
 
 .inner {
@@ -10,6 +11,7 @@
 }
 
 .categories {
+    flex-shrink: 0;
     width: 270px;
     height: 100%;
     border-radius: 3px 3px 0 0;
@@ -19,6 +21,10 @@
     padding-left: 18px;
     cursor: pointer;
     margin-right: 2px;
+
+    &.active {
+        background-color: var(--hover-color);
+    }
 
     &:hover {
         background-color: var(--hover-color);
@@ -33,8 +39,53 @@
     margin-bottom: 1px;
 }
 
+.list {
+    width: 270px;
+    min-height: 50px;
+    background-color: white;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: calc(50% - 5.2px);
+        width: 0;
+        height: 0;
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-top: 6px solid black;
+        transform: translateY(-1px);
+    }
+}
+
+.list-item {
+    width: 100%;
+    padding: 0 38px 0 20px;
+    font-size: 1.4rem;
+    color: #000000de;
+    display: flex;
+    align-items: center;
+    padding-bottom: 1px;
+    cursor: pointer;
+    height: 39.6px;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+
+    &:first-child {
+        padding-top: 5px;
+        height: 45px;
+    }
+
+    &:hover {
+        text-decoration: underline;
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+    }
+}
+
 .item {
-    width: 169.25px;
+    width: 14.467%;
     background-color: #212121;
     border-radius: 3px 3px 0 0;
     color: #ffffffe6;
@@ -57,7 +108,7 @@
     color: white;
     background-color: #6202ea;
     font-weight: bold;
-    width: 198px;
+    width: 16.925%;
     display: flex;
     align-items: center;
     border-radius: 3px 3px 0 0;
