--- a/src/components/GlobalStyle/GlobalStyle.module.scss
+++ b/src/components/GlobalStyle/GlobalStyle.module.scss
@@ -24,6 +24,10 @@ input {
     border: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 @font-face {
     font-family: Roboto;
     src: url('../../assets/fonts/Roboto-Bold.woff2');
