--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,6 +6,7 @@
     padding: 0 16px;
     position: fixed;
     user-select: none;
+    z-index: 1000;
 }
 
 .inner {
@@ -59,6 +60,7 @@
     &.mb {
         width: 100%;
         border-radius: 3px;
+        margin-bottom: 6px;
     }
 
     &::placeholder {
