--- a/src/components/GlobalStyle/GlobalStyle.module.scss
+++ b/src/components/GlobalStyle/GlobalStyle.module.scss
@@ -36,5 +36,11 @@ a {
 
 @font-face {
     font-family: Roboto;
+    src: url('../../assets/fonts/Roboto-Medium.woff2');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: Roboto;
     src: url('../../assets/fonts/Roboto-Regular.woff2');
 }
