--- a/src/components/GlobalStyle/GlobalStyle.module.scss
+++ b/src/components/GlobalStyle/GlobalStyle.module.scss
@@ -24,6 +24,12 @@ input {
     border: none;
 }
 
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 a {
     text-decoration: none;
 }
