--- a/src/components/SearchArea/SearchArea.module.scss
+++ b/src/components/SearchArea/SearchArea.module.scss
@@ -1,10 +1,9 @@
 .wrapper {
-    width: 100%;
     user-select: none;
+    width: 100%;
 }
 
 .inner {
-    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -40,6 +39,8 @@
     padding-top: 15px;
     display: flex;
     justify-content: space-between;
+    padding-bottom: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .tools-result {
