--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -49,12 +49,13 @@
 }
 
 .search-input {
-    padding: 11px 40px 11px 15px;
+    padding: 12px 40px 11px 15px;
     border-radius: 3px 0px 0px 3px;
     height: 40px;
     width: 67.165%;
-    color: #7575a1;
+    color: black;
     background-color: white;
+    font-size: 1.4rem;
 
     &.tb,
     &.mb {
@@ -64,7 +65,6 @@
     }
 
     &::placeholder {
-        transform: translateY(1px);
         color: #7575a1;
         font-weight: 500;
         font-size: 1.4rem;
