--- a/src/components/SearchArea1/SearchArea1.module.scss
+++ b/src/components/SearchArea1/SearchArea1.module.scss
@@ -78,18 +78,28 @@
     }
 }
 
-.products {
+.body {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    min-height: 400px;
+    padding-left: 30px;
 }
 
-.filter-price {
+.tag {
+    width: 100%;
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.tag-price {
+    min-width: 130px;
+    height: 30px;
     padding: 4px 9px;
     background-color: white;
-    margin-left: 30px;
-    min-width: 130px;
     border: 1px solid rgba(0, 0, 0, 0.12);
     border-radius: 3px;
     transition: border-color 0.15s linear 0s;
-    height: 30px;
     display: flex;
     align-items: center;
     font-size: 1.2rem;
@@ -108,4 +118,235 @@
 .filterPrice-icon {
     transform: translateY(-1px);
     transition: all linear 0.15s;
+}
+
+.layout1 {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 3rem;
+}
+
+.layout1-base {
+    font-size: 1rem;
+    color: #b8b8b8;
+    margin-bottom: 6px;
+    display: flex;
+}
+
+.layout1-item {
+    width: 270.4px;
+    background-color: #f2f8fe;
+    cursor: pointer;
+    transition: all linear 0.2s;
+    &:hover {
+        transform: translate(0px, -2px);
+        .layout1-info {
+            border-color: var(--zth-color-blue-300, #90c7ff);
+            border-radius: 4px;
+            box-shadow: rgba(8, 104, 243, 0.06) 0px 3.5px 5.1px, rgba(8, 104, 243, 0.106) 0px 4px 4.4px,
+                rgba(8, 104, 243, 0.2) 0px 7px 17px;
+        }
+    }
+}
+
+.layout1-img {
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.layout1-info {
+    height: 172.4px;
+    padding: 8px 16px 16px;
+    border: 1px solid #dedede;
+    border-top: none;
+    margin-top: -2px;
+    display: flex;
+    flex-direction: column;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    transition: all linear 0.2s;
+    justify-content: space-between;
+}
+
+.layout1-name {
+    display: flex;
+    margin-top: 8px;
+    font-size: 1.4rem;
+    color: #212121;
+    font-weight: 700;
+    line-height: 20px;
+}
+
+.layout1-price {
+    display: flex;
+    color: #212121;
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 21px;
+}
+
+.layout1-oldPrice {
+    display: block;
+    width: max-content;
+    color: #757575;
+    font-size: 1.2rem;
+    line-height: 20px;
+    position: relative;
+    margin-top: 0.4px;
+
+    &::after {
+        content: '';
+        left: 17px;
+        position: absolute;
+        width: 100%;
+        height: 0.4px;
+        background-color: #8e8e8e;
+        top: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+.layout1-discount {
+    width: max-content;
+    border: 1px solid #41c303;
+    background: #ebf8e4;
+    color: #41c303;
+    font-size: 1.1rem;
+    padding: 3px 6px 1px;
+    font-weight: bold;
+    border-radius: 4px;
+    padding-bottom: 2.4px;
+    display: flex;
+}
+
+.layout2 {
+    width: 100%;
+    padding-top: 1px;
+}
+
+.layout2-item {
+    height: 120px;
+    display: flex;
+    background-color: #f2f8fe;
+    padding: 8px 16px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-top-color: #ccc;
+    transition: all linear 0.2s;
+
+    &:hover {
+        border: 1px solid #90c7ff;
+        border-color: var(--zth-color-blue-300, #90c7ff);
+        border-radius: 4px;
+    }
+}
+
+.layout2-box {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.layout2-img {
+    width: 60px;
+    height: 80px;
+    object-fit: cover;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.layout2-detail {
+    display: flex;
+    flex: 1;
+
+    &.tb,
+    &.mb {
+        flex-direction: column;
+    }
+}
+
+.layout2-info {
+    padding-top: 10.4px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 15.8px;
+    flex: 1;
+}
+
+.layout2-base {
+    font-size: 1rem;
+    color: #b8b8b8;
+    display: flex;
+    margin-bottom: 6px;
+}
+
+.layout2-name {
+    font-size: 1.4rem;
+    font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 20px;
+}
+
+.layout2-buy {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 1px;
+    justify-content: center;
+    padding-bottom: 1px;
+
+    &.tb,
+    &.mb {
+        flex-direction: row;
+        justify-content: flex-start;
+        padding-left: 16px;
+        gap: 1rem;
+    }
+}
+
+.layout2-price {
+    display: flex;
+    color: #212121;
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 21px;
+}
+
+.layout2-oldPrice {
+    display: block;
+    width: max-content;
+    color: #757575;
+    font-size: 1.2rem;
+    line-height: 20px;
+    position: relative;
+    margin-top: 0.4px;
+
+    &::after {
+        content: '';
+        left: 17px;
+        position: absolute;
+        width: 100%;
+        height: 0.4px;
+        background-color: #8e8e8e;
+        top: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+.layout2-discount {
+    width: max-content;
+    border: 1px solid #41c303;
+    background: #ebf8e4;
+    color: #41c303;
+    font-size: 1.1rem;
+    padding: 3px 6px 1px;
+    font-weight: bold;
+    border-radius: 4px;
+    padding-bottom: 2.4px;
+    display: flex;
 }
