--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -53,13 +53,26 @@
     height: 48px;
     border-radius: 50px;
     background-color: #212121;
-}
-
-.cart {
-    transition: all linear 0.2s;
-
+    position: relative;
     &:hover {
         background-color: #4d4d4d;
+    }
+
+    .quantity {
+        position: absolute;
+        top: -3px;
+        border-radius: 50%;
+        color: rgb(255, 255, 255);
+        background-color: rgb(8, 104, 243);
+        height: 20px;
+        width: 20px;
+        font-size: 12px;
+        line-height: 21px;
+        right: -8px;
+        font-weight: bold;
+        letter-spacing: 0px;
+        text-align: center;
+        transition: all 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s;
     }
 }
 
@@ -166,14 +179,15 @@
         display: flex;
         margin-top: 5px;
         align-items: center;
+        content: 'G2A Admin';
 
         .rule-box {
             margin-left: -0.8px;
             width: 8px;
             height: 8px;
-            background-color: red;
             border-radius: 50px;
             margin-right: 8px;
+            background-color: red;
         }
     }
 }
