--- a/src/components/SearchArea1/SearchArea1.module.scss
+++ b/src/components/SearchArea1/SearchArea1.module.scss
@@ -131,7 +131,7 @@
     gap: 3rem;
 }
 
-.layout1-base {
+.layout1-title {
     font-size: 1rem;
     color: #b8b8b8;
     margin-bottom: 6px;
@@ -281,7 +281,7 @@
     flex: 1;
 }
 
-.layout2-base {
+.layout2-title {
     font-size: 1rem;
     color: #b8b8b8;
     display: flex;
