--- a/src/components/SearchArea1/SearchArea1.module.scss
+++ b/src/components/SearchArea1/SearchArea1.module.scss
@@ -183,6 +183,10 @@
     color: #212121;
     font-weight: 700;
     line-height: 20px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .layout1-price {
