--- a/src/components/SearchArea1/SearchArea1.module.scss
+++ b/src/components/SearchArea1/SearchArea1.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
     margin-top: 29px;
     width: 100%;
+    height: 1000px;
 }
 
 .inner {
@@ -363,4 +364,42 @@
     border-radius: 4px;
     padding-bottom: 2.4px;
     display: flex;
+}
+
+.empty {
+    padding-top: 35px;
+    margin-top: 1px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(224, 224, 224);
+    min-height: 294px;
+
+    .title {
+        margin-top: -2px;
+        display: flex;
+        justify-content: center;
+        font-size: 2.4rem;
+        color: #000000de;
+    }
+
+    .change {
+        margin-top: 16px;
+        display: flex;
+        justify-content: center;
+        color: #000000de;
+        font-size: 1.4rem;
+        align-items: center;
+    }
+
+    .back {
+        margin-left: 3.4px;
+        color: rgb(47, 130, 251);
+        cursor: pointer;
+        flex-shrink: 0;
+        font-family: Arial;
+        transform: translateY(0.4px);
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
