--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -1,9 +1,214 @@
 .wrapper {
     width: 100%;
+    height: 2000px;
+    user-select: none;
 }
 
 .inner {
     width: 100%;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 35px;
+    .row {
+        display: flex;
+        align-items: flex-end;
+    }
+
+    .title {
+        font-size: 3.4rem;
+        font-weight: bold;
+    }
+
+    .quantity {
+        font-size: 1.2rem;
+        color: #4a4a4a;
+        margin-left: 10px;
+        margin-bottom: 6px;
+    }
+
+    .warn {
+        display: flex;
+        padding-top: 4px;
+    }
+
+    .content {
+        font-size: 1.4rem;
+        color: #000000de;
+        margin-left: 10px;
+        padding-top: 2px;
+    }
+}
+
+.body {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+
+    .box-product {
+        display: flex;
+        flex-direction: column;
+        width: 65.81%;
+    }
+
+    .product {
+        width: 100%;
+        background: rgb(255, 255, 255);
+        border: 1px solid rgb(224, 224, 224);
+        border-radius: 4px;
+        margin-bottom: 15px;
+        transition: opacity 0.3s ease 0s;
+        min-height: 200px;
+    }
+
+    .product-header {
+        width: 100%;
+        height: 43px;
+        border-bottom: 1px solid rgb(224, 224, 224);
+        padding: 0 15px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header-title {
+        font-size: 1rem;
+        color: #b8b8b8;
+    }
+
+    .product-item {
+        display: flex;
+        padding: 20px 17px;
+        height: 196.8px;
+    }
+
+    .img {
+        max-height: 100%;
+        max-width: 100%;
+        width: 117px;
+        height: 100%;
+        object-fit: cover;
+        text-indent: -999999px;
+        color: transparent;
+        white-space: nowrap;
+        transition: opacity 0.2s ease 0s;
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 1;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .product-name {
+        margin-left: 16px;
+        font-size: 14px;
+        font-weight: 700;
+        color: rgb(33, 33, 33);
+        line-height: 20px;
+        width: 47%;
+    }
+
+    .product-tools {
+        width: 100px;
+        display: flex;
+        align-items: center;
+        padding-bottom: 1px;
+    }
+
+    .tools-change {
+        cursor: pointer;
+        font-size: 14px;
+        padding: 12px 2px 10px 14.4px;
+        width: 65px;
+        height: 42.4px;
+        border: 1px solid #e0e0e0;
+        border-radius: 3px;
+        display: flex;
+        font-family: Arial;
+        transition: all linear 0.2s;
+        margin-right: 11px;
+
+        &.active {
+            border-color: #2f82fb;
+            box-shadow: 0 0 4px #92bbf8;
+        }
+    }
+
+    .product-price {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        flex: 1;
+        padding-bottom: 4px;
+        margin-right: -1px;
+    }
+
+    .dollars {
+        font-size: 1.8rem;
+        color: #212121;
+    }
+
+    .vat {
+        transform: translateY(3px);
+        font-size: 1rem;
+        color: #b8b8b8;
+    }
+
+    .footer {
+        display: flex;
+        align-items: center;
+        padding-left: 15px;
+        height: 50.8px;
+        border-top: 1px solid #e0e0e0;
+        color: rgb(47, 130, 251);
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 20px;
+        text-decoration: none;
+        padding-top: 1px;
+    }
+
+    .pay {
+        width: 31.6249%;
+    }
+
+    .pay-box1 {
+        width: 100%;
+        padding: 15px;
+        height: 119px;
+        border: 1px solid #bd97f4;
+        border-radius: 4px;
+        padding-left: 14.6px;
+    }
+
+    .payBox1-header {
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .payBox1-detail {
+        display: flex;
+        padding-top: 8px;
+    }
+
+    .payBox1-description {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .payBox1-title {
+        height: 14.4px;
+        display: flex;
+        align-items: center;
+        font-size: 1.2rem;
+        color: #212121;
+        gap: 4px;
+        margin-bottom: 6px;
+    }
 }
 
 .empty {
