--- a/src/pages/Detail/Detail.module.scss
+++ b/src/pages/Detail/Detail.module.scss
@@ -1,6 +1,5 @@
 .wrapper {
     width: 100%;
-    height: 1999px;
     background-color: white;
     user-select: none;
 }
@@ -78,24 +77,26 @@
         flex-direction: column;
         align-items: center;
 
-        .img {
-            object-fit: contain;
+        .product-img {
             width: 100%;
             margin-bottom: 20px;
         }
     }
 
-    .img {
+    .product-img {
         width: 338px;
         height: 456px;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 4px;
+        border: 1px solid #ccc;
+        background-color: #b8b8b8;
     }
 
     .info {
         width: 40.171%;
         display: flex;
         flex-direction: column;
+        margin-bottom: 20px;
 
         &.tb,
         &.mb {
@@ -182,6 +183,45 @@
                     }
                 }
             }
+        }
+
+        .system {
+            color: #2f82fb;
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 20px;
+            display: flex;
+            align-items: center;
+            padding-top: 0.4px;
+            cursor: pointer;
+        }
+
+        .info-description {
+            margin-top: 15px;
+            margin-bottom: 1px;
+            padding-top: 15px;
+            border-top: 1px solid #e0e0e0;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 20px;
+            word-break: normal;
+            overflow-wrap: break-word;
+            color: #757575;
+        }
+
+        .more {
+            display: flex;
+            -webkit-box-align: center;
+            align-items: center;
+            -webkit-box-pack: start;
+            justify-content: flex-start;
+            cursor: pointer;
+            font-size: 12px;
+            font-weight: 700;
+            line-height: 20px;
+            white-space: nowrap;
+            text-decoration: none;
+            color: #2f82fb;
         }
     }
 }
