--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -154,8 +154,28 @@
     .avatar {
         width: 48px;
         height: 48px;
+        position: relative;
+        cursor: pointer;
+    }
+
+    .avatar-img {
+        width: 48px;
+        height: 48px;
         border-radius: 50%;
         object-fit: cover;
+    }
+
+    .avatar-change {
+        width: 27px;
+        height: 26px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        background-color: #2f82fb;
+        position: absolute;
+        right: -7px;
+        bottom: 0;
     }
 
     .detail {
@@ -197,8 +217,11 @@
     align-items: center;
     height: 20px;
     justify-content: space-between;
-    margin-top: 249px;
+    // margin-top: 249px;
+    margin-top: 10px;
     flex-shrink: 0;
+    padding: 25px 0 10px 0;
+    border-top: 1px solid #ccc;
 
     .setting {
         display: flex;
