--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -249,6 +249,16 @@
 
     .pay {
         width: 31.6249%;
+
+        &.tb,
+        &.mb {
+            margin-bottom: 120px;
+            .pay-box2 {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+            }
+        }
     }
 
     .pay-box1 {
