--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -23,6 +23,13 @@
     display: flex;
 }
 
+.arrown-back {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin-right: 12px;
+}
+
 .search-control {
     width: 100%;
     position: relative;
@@ -39,7 +46,8 @@
 
     &.tb,
     &.mb {
-        border-radius: 3px;
+        border-top-left-radius: 3px;
+        border-bottom-left-radius: 3px;
     }
 
     &::placeholder {
@@ -226,10 +234,6 @@
         font-size: 14px;
         line-height: 20px;
         color: #212121;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
     }
 
     .price {
@@ -305,6 +309,16 @@
         display: flex;
         margin-bottom: 10px;
         color: #000;
+        max-width: 150px;
+        overflow: hidden;
+        display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
