--- a/src/pages/Detail/Detail.module.scss
+++ b/src/pages/Detail/Detail.module.scss
@@ -2,6 +2,23 @@
     width: 100%;
     background-color: #f9f9f9;
     user-select: none;
+    min-height: 1000px;
+
+    &.tb,
+    &.mb {
+        .result {
+            flex-direction: column;
+            align-items: flex-start;
+            margin: 10px 0;
+            height: 55px;
+            justify-content: space-between;
+        }
+
+        .result-box {
+            display: flex;
+            align-items: center;
+        }
+    }
 }
 
 .inner {
@@ -9,7 +26,7 @@
 }
 
 .result {
-    font-size: 1.2rem;
+    flex: 1;
     color: #757575;
     height: 50px;
     display: flex;
@@ -33,6 +50,7 @@
     cursor: pointer;
     transition: all linear 0.2s;
     margin-top: -1px;
+    flex-shrink: 0;
 
     &:hover {
         color: #4b4b4b;
@@ -48,14 +66,20 @@
     }
 }
 
+.result-box {
+    font-size: 1.2rem;
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
 .result-character {
-    transform: translateY(-2px);
     margin: 0 10px;
     font-size: 1.6rem;
+    padding-bottom: 1px;
 }
 
 .result-title {
-    transform: translateY(-1px);
 }
 
 .advert {
