--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
     width: 100%;
+    height: 573px;
 }
 
 .inner {
@@ -10,4 +11,226 @@
 
 .body {
     width: 1170px;
+    display: flex;
+    flex-direction: column;
+
+    .payment {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        height: 58.6px;
+        border-bottom: 1px solid #e0e0e0;
+
+        .payment-methods {
+            display: flex;
+            flex: 1;
+
+            .paymentMethods-title {
+                font-size: 1.2rem;
+                color: #707070;
+                margin-right: 14px;
+                display: flex;
+                align-items: center;
+            }
+
+            .paymentMethods-list {
+                flex: 1;
+                display: flex;
+                align-items: center;
+                gap: 1.4rem;
+                font-size: 1.2rem;
+                color: #707070;
+                img {
+                    height: 100%;
+                    width: auto;
+                    max-height: 17px;
+                    max-width: 100px;
+                }
+            }
+        }
+
+        .payment-languages {
+            width: max-content;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding-bottom: 1px;
+
+            .paymentLanguages-img {
+                img {
+                    width: 15px;
+                    height: 15px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+            }
+
+            .paymentLanguages-title {
+                margin: 0px 5px;
+                color: rgb(112, 112, 112);
+                font-size: 12px;
+                letter-spacing: 0px;
+                line-height: 18px;
+                transition-property: color, transform;
+                transition-duration: 0.1s;
+                transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+                font-family: Arial;
+            }
+        }
+    }
+
+    .info {
+        width: 100%;
+        padding: 40px 0 50px 0;
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid #e0e0e0;
+
+        .info-list {
+            display: flex;
+            gap: 4.5rem;
+
+            .info-item {
+                display: flex;
+                flex-direction: column;
+
+                .infoItem-title {
+                    font-weight: 600;
+                    font-size: 12px;
+                    line-height: 14px;
+                    text-transform: uppercase;
+                    color: rgb(33, 33, 33);
+                    margin: 0px 0px 11px;
+                }
+
+                .infoItem-content {
+                    font-size: 1.2rem;
+                    color: #0000008a;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    height: 22px;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+
+        .info-contact {
+            width: 230px;
+            justify-content: flex-start;
+
+            .infoContact-title {
+                font-weight: bold;
+                font-size: 1.2rem;
+                color: #000000de;
+                display: flex;
+                align-items: center;
+                height: 14px;
+                padding-bottom: 1px;
+                margin-bottom: 2px;
+            }
+
+            .infoContact-content {
+                font-size: 12px;
+                line-height: 22px;
+                margin-bottom: 10px;
+                color: #707070;
+            }
+
+            .infoContact-vote {
+                display: block;
+                width: 100%;
+                height: 32px;
+                color: #6a6a6a;
+                box-sizing: border-box;
+                border: 1px solid #e0e0e0;
+                border-radius: 6px;
+                text-align: left;
+                padding: 5px;
+                padding-top: 6px;
+                margin: 10px 0;
+                display: flex;
+                align-items: center;
+                color: #6a6a6a;
+                font-size: 1.2rem;
+
+                .infoContact-starts {
+                    display: flex;
+                    gap: 0.1rem;
+                    margin-right: 2px;
+                }
+            }
+
+            .infoContact-get {
+                display: flex;
+                gap: 0.6rem;
+
+                .infoContact-getImg {
+                    img {
+                        height: 35px;
+                    }
+                }
+            }
+        }
+    }
+
+    .location {
+        width: 100%;
+        border-bottom: 1px solid #e0e0e0;
+        padding: 21px 0 19.5px;
+        display: flex;
+
+        .location-detail {
+            flex: 1;
+            display: flex;
+            gap: 2rem;
+
+            .location-list {
+                width: 31.25%;
+                display: flex;
+                flex-direction: column;
+                .locationList-item {
+                    font-size: 1.1rem;
+                    color: #707070;
+                    line-height: 16px;
+                }
+            }
+        }
+
+        .location-socials {
+            justify-content: flex-end;
+            width: 226px;
+            display: flex;
+            gap: 0.5rem;
+            height: 28px;
+
+            img {
+                transition: all linear 0.2s;
+                cursor: pointer;
+
+                &:hover {
+                    transform: scale(1.15);
+                }
+            }
+        }
+    }
+
+    .privacy {
+        padding-top: 22px;
+        padding-bottom: 20px;
+        color: #777777;
+        font-size: 1.1rem;
+
+        .privacy-link {
+            color: #000000de;
+            font-weight: bold;
+            cursor: pointer;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
 }
