--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -3,6 +3,10 @@
     background-color: #f9f9f9;
 }
 
+.inner {
+    overflow: hidden;
+}
+
 .body {
     padding-top: 120px;
     min-height: 790px;
