--- a/src/components/Present/Present.module.scss
+++ b/src/components/Present/Present.module.scss
@@ -127,6 +127,8 @@
     .present-poster {
         transform: translateY(-35px);
         img {
+            width: 100%;
+            object-fit: cover;
         }
     }
 }
