--- a/src/components/RenderBestDeals/RenderBestDeals.module.scss
+++ b/src/components/RenderBestDeals/RenderBestDeals.module.scss
@@ -175,5 +175,13 @@
 
     .session-body {
         width: 1170px;
+
+        .advert {
+            img {
+                margin-top: 30px;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
     }
 }
