--- a/src/pages/Detail/Detail.module.scss
+++ b/src/pages/Detail/Detail.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     background-color: #f9f9f9;
     user-select: none;
-    min-height: 1000px;
+    // min-height: 1000px;
 
     &.tb,
     &.mb {
