--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -9,7 +9,7 @@
 
 .body {
     padding-top: 120px;
-    min-height: 790px;
+    // min-height: 790px;
     width: 100%;
     display: flex;
     padding: 120px 16px 0 16px;
