--- a/src/components/SearchArea/SearchArea.module.scss
+++ b/src/components/SearchArea/SearchArea.module.scss
@@ -298,3 +298,41 @@
     right: 15px;
     cursor: pointer;
 }
+
+.pagination {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 30px;
+
+    .pagination-list {
+        display: flex;
+        overflow: hidden;
+        border-radius: 3px;
+        width: max-content;
+        border: 1px solid #2f82fb;
+
+        .pagination-item {
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            color: white;
+            font-size: 1.4rem;
+            width: 45px;
+            height: 42px;
+            color: #1d6ee8;
+            transition: all linear 0.2s;
+
+            &:hover {
+                background-color: rgb(62, 132, 237, 0.3);
+            }
+
+            &.active {
+                background-color: #2f82fb;
+                color: white;
+            }
+
+            cursor: pointer;
+        }
+    }
+}
