--- a/src/components/SearchArea/SearchArea.module.scss
+++ b/src/components/SearchArea/SearchArea.module.scss
@@ -303,7 +303,7 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    margin-top: -25px;
+    margin-top: 20px;
 
     .pagination-first {
         align-items: center;
@@ -365,6 +365,7 @@
     border: 1px solid #2f82fb;
 
     .pagination-item {
+        flex-shrink: 0;
         align-items: center;
         justify-content: center;
         display: flex;
