--- a/src/admin/DefaulLayoutAdmin/DefaultLayoutAdmin.module.scss
+++ b/src/admin/DefaulLayoutAdmin/DefaultLayoutAdmin.module.scss
@@ -30,3 +30,12 @@
     border-radius: 4px;
     border: 2px solid #ccc;
 }
+
+.list-item {
+    width: 100%;
+    height: 100%;
+    font-size: 1.5rem;
+    color: black;
+    font-weight: bold;
+    display: flex;
+}
