--- a/src/admin/DefaulLayoutAdmin/DefaultLayoutAdmin.module.scss
+++ b/src/admin/DefaulLayoutAdmin/DefaultLayoutAdmin.module.scss
@@ -31,11 +31,44 @@
     border: 2px solid #ccc;
 }
 
+.header {
+    position: fixed;
+    left: 0;
+    right: 0;
+    padding: 0 21px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    height: 70px;
+}
+
+.header-title {
+    font-size: 1.6rem;
+    color: white;
+    font-weight: 500;
+}
+
+.list {
+    padding-top: 70px;
+    flex-shrink: 0;
+    width: max-content;
+}
+
 .list-item {
     width: 100%;
     height: 100%;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     color: black;
     font-weight: bold;
     display: flex;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    color: #413f3f;
+    padding: 5px;
+}
+
+.body {
+    padding-top: 70px;
 }
