--- a/src/components/Loading/Loading.module.scss
+++ b/src/components/Loading/Loading.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     width: 100%;
-    padding-top: 40px;
+    height: 100%;
 }
 
 .inner {
@@ -11,8 +11,6 @@
 }
 
 .loading {
-    width: 60px;
-    height: 60px;
     border: 5px solid #f3f3f3;
     border-top: 5px solid #fab031;
     border-radius: 50%;
