--- a/src/pages/Detail/Detail.module.scss
+++ b/src/pages/Detail/Detail.module.scss
@@ -158,9 +158,9 @@
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        background-color: rgb(252, 175, 23);
                         flex-shrink: 0;
                         margin-right: 10px;
+                        border: 1px solid #e0e0e0;
                     }
 
                     .img {
