--- a/src/admin/pages/AdminEditProduct/AdminEditProduct.module.scss
+++ b/src/admin/pages/AdminEditProduct/AdminEditProduct.module.scss
@@ -10,10 +10,90 @@
 }
 
 .inner {
-    width: 600px;
+    width: 100%;
+    display: flex;
+    padding: 0 50px;
+    gap: 3rem;
+    justify-content: space-between;
+
+    &.mb,
+    &.tb {
+        flex-direction: column;
+        align-items: center;
+    }
+    padding-bottom: 50px;
+}
+
+.info {
     display: flex;
     flex-direction: column;
-    padding: 0 10px;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+}
+
+.keys-add {
+    width: 100%;
+    display: flex;
+    position: relative;
+
+    .keys-btn {
+        right: 0;
+        height: 100%;
+        font-size: 1.4rem;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        position: absolute;
+        cursor: pointer;
+        background-color: #ccc;
+        padding: 10px;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        transition: all linear 0.2s;
+
+        &:hover {
+            background-color: #e5e4e4;
+        }
+    }
+}
+
+.keys-box {
+    width: 100%;
+    max-height: 150px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: white;
+    padding: 10px;
+    overflow-y: auto;
+}
+
+.keys-item {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+}
+
+.keys-quantity {
+    font-size: 1.4rem;
+    color: black;
+    user-select: none;
+}
+
+.keys-name {
+    font-size: 1.4rem;
+    color: black;
+}
+
+.edit {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
 }
 
@@ -21,6 +101,21 @@
     width: 100%;
     display: flex;
     gap: 2rem;
+}
+
+.col {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.label-title {
+    padding-left: 2px;
+    width: 100%;
+    font-size: 1.4rem;
+    color: black;
+    font-weight: bold;
 }
 
 .header {
@@ -31,6 +126,7 @@
 
 .input,
 .select {
+    background-color: white;
     border: 1px solid #ccc;
     border-radius: 6px;
     font-size: 1.3rem;
@@ -106,5 +202,27 @@ button {
 
     &.active {
         top: 80px;
+    }
+}
+
+.confirm-delKey {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 200px;
+    flex-direction: column;
+    gap: 2rem;
+
+    .confirmDelKey-header {
+        font-size: 2rem;
+        color: white;
+        font-weight: bold;
+        z-index: 10;
     }
 }
