--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -1,11 +1,11 @@
 .wrapper {
     width: 100%;
     user-select: none;
-    // min-height: 1000px;
 }
 
 .inner {
     width: 100%;
+    min-height: 790px;
 }
 
 .header {
