--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -122,6 +122,51 @@
         line-height: 18px;
         height: 48px;
     }
+
+    .login-btn {
+        width: 100%;
+        border-radius: 4px;
+        background-color: #2f82fb;
+        font-weight: bold;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 37.6px;
+        margin-top: 10px;
+        font-size: 1.4rem;
+        transition: all linear 0.2s;
+
+        cursor: pointer;
+
+        &:hover {
+            background-color: #4e79ba;
+        }
+    }
+
+    .register {
+        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        span {
+            font-size: 1.4rem;
+            color: black;
+            font-weight: bold;
+        }
+
+        a {
+            font-size: 14px;
+            font-weight: bold;
+            line-height: 20px;
+            text-decoration: none;
+            display: flex;
+            -webkit-box-pack: center;
+            justify-content: center;
+            color: rgb(47, 130, 251);
+            cursor: pointer;
+        }
+    }
 }
 
 .member {
