--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -260,12 +260,11 @@
 .footer {
     display: flex;
     align-items: center;
-    height: 20px;
+    height: 50px;
     justify-content: space-between;
-    // margin-top: 249px;
     margin-top: 10px;
     flex-shrink: 0;
-    padding: 25px 0 10px 0;
+    padding: 15px 0 0 0;
     border-top: 1px solid #ccc;
 
     .setting {
