--- a/src/components/ChangeAvatar/ChangeAvatar.module.scss
+++ b/src/components/ChangeAvatar/ChangeAvatar.module.scss
@@ -4,11 +4,12 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
     visibility: hidden;
+    z-index: 1000000000000;
 
     &.active {
         visibility: visible;
